--- a/style.css
+++ b/style.css
@@ -11,95 +11,46 @@ html {
 .container {
   width: 100%;
   height: 100vh;
-  background: url(./img/form-background.jpg) center no-repeat;
-  background-size: cover;
-  perspective: 100rem;
 }
-.forms-wrapper {
-  transform-style: preserve-3d;
-  position: absolute;
-  left: calc(50% - 25rem);
-  top: calc(50% - 15rem);
-  transform: rotateY(-10deg);
-  transition: transform 0.5s, left 0.5s;
-}
-.signIn-form {
-  z-index: 1;
-}
-.signUp-form {
-  transform: rotateY(200deg) translateZ(32rem) translateY(0rem);
-  z-index: -1;
-}
-
-.forms-wrapper.change {
-  transform: rotateY(150deg);
-  left: calc(50% + 25rem);
-}
-
-.forms-wrapper form {
-  width: 50rem;
-  height: 30rem;
-  background-color: #ddd;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: space-around;
-  box-shadow: 0 3px 3px #ddd;
-  position: absolute;
-}
-form a {
-  position: absolute;
-  top: 2rem;
-  background-color: #fff;
-  text-transform: uppercase;
-  font-weight: 600;
-  color: #000;
-  letter-spacing: 0.2rem;
-}
-
-.signup-btn {
-  padding: 0.5rem 1rem 0.5rem 3rem;
-  border-radius: 100% 0.5rem 0.5rem 100%;
-  left: 2rem;
-}
-.signin-btn {
-  padding: 0.5rem 3rem 0.5rem 1rem;
-  border-radius: 0.5rem 100% 100% 0.5rem;
-  right: 2rem;
-}
-
-form h2 {
-  font-size: 2.5rem;
-  letter-spacing: 0.2rem;
-  text-transform: uppercase;
-  color: #000;
-}
-.inputs_wrapper {
-  display: flex;
-  flex-direction: column;
+.grid-gallary img {
   width: 100%;
-  align-items: center;
+  height: 100%;
+  object-fit: cover;
 }
-.inputs_wrapper input {
-  width: 50%;
-  height: 3rem;
-  outline: none;
-  padding: 0.5rem 1rem;
-  margin: 0.5rem;
-  background: transparent;
-  border-radius: 0.9rem;
-  border: 1px solid #999;
-  letter-spacing: 0.1rem;
+.grid-gallary {
+  display: grid;
+  grid-template-columns: repeat(8, minmax(10px, 1fr));
+  grid-template-rows: repeat(4, 10vw);
 }
-.inputs_wrapper input::placeholder {
-  color: #090909;
-  font-weight: 600;
+.img-1 {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
 }
-.inputs_wrapper input[type="submit"] {
-  background-color: #1b3b4a;
-  color: #fff;
-  font-weight: 900;
-  letter-spacing: 0.2rem;
-  cursor: pointer;
-  text-transform: uppercase;
+.img-2 {
+  grid-column: 3 / 6;
+  grid-row: 1 / 3;
+}
+.img-3 {
+  grid-column: 6 / 7;
+  grid-row: 1 / 2;
+}
+.img-4 {
+  grid-column: 1 / 3;
+  grid-row: 3 / 4;
+}
+.img-5 {
+  grid-column: 1 / 3;
+  grid-row: 3 / 4;
+}
+.img-6 {
+  grid-column: 1 / 3;
+  grid-row: 2 / 4;
+}
+.img-7 {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+}
+.img-8 {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
 }
