--- a/style.css
+++ b/style.css
@@ -8,98 +8,33 @@
 html {
   font-size: 70.5%;
 }
-.container {
-  width: 100%;
-  height: 100vh;
-  background: url(./img/form-background.jpg) center no-repeat;
-  background-size: cover;
-  perspective: 100rem;
-}
-.forms-wrapper {
-  transform-style: preserve-3d;
-  position: absolute;
-  left: calc(50% - 25rem);
-  top: calc(50% - 15rem);
-  transform: rotateY(-10deg);
-  transition: transform 0.5s, left 0.5s;
-}
-.signIn-form {
-  z-index: 1;
-}
-.signUp-form {
-  transform: rotateY(200deg) translateZ(32rem) translateY(0rem);
-  z-index: -1;
-}
-
-.forms-wrapper.change {
-  transform: rotateY(150deg);
-  left: calc(50% + 25rem);
-}
-
-.forms-wrapper form {
-  width: 50rem;
-  height: 30rem;
-  background-color: #ddd;
-  display: flex;
+div#navBar {
+  list-style: none;
+  justify-content: center;
   align-items: center;
-  flex-direction: column;
-  justify-content: space-around;
-  box-shadow: 0 3px 3px #ddd;
-  position: absolute;
-}
-form a {
-  position: absolute;
-  top: 2rem;
-  background-color: #fff;
-  text-transform: uppercase;
-  font-weight: 600;
-  color: #000;
-  letter-spacing: 0.2rem;
-}
-
-.signup-btn {
-  padding: 0.5rem 1rem 0.5rem 3rem;
-  border-radius: 100% 0.5rem 0.5rem 100%;
-  left: 2rem;
-}
-.signin-btn {
-  padding: 0.5rem 3rem 0.5rem 1rem;
-  border-radius: 0.5rem 100% 100% 0.5rem;
-  right: 2rem;
-}
-
-form h2 {
-  font-size: 2.5rem;
-  letter-spacing: 0.2rem;
-  text-transform: uppercase;
-  color: #000;
-}
-.inputs_wrapper {
-  display: flex;
-  flex-direction: column;
+  background: cornflowerblue;
+  position: fixed;
   width: 100%;
-  align-items: center;
+  transition: 0.5s all;
 }
-.inputs_wrapper input {
-  width: 50%;
-  height: 3rem;
-  outline: none;
-  padding: 0.5rem 1rem;
-  margin: 0.5rem;
-  background: transparent;
-  border-radius: 0.9rem;
-  border: 1px solid #999;
-  letter-spacing: 0.1rem;
+
+div#navBar ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: row;
 }
-.inputs_wrapper input::placeholder {
-  color: #090909;
+
+div#navBar ul li {
+  font-size: 2rem;
   font-weight: 600;
+  padding: 6px 25px;
 }
-.inputs_wrapper input[type="submit"] {
-  background-color: #1b3b4a;
-  color: #fff;
-  font-weight: 900;
-  letter-spacing: 0.2rem;
-  cursor: pointer;
-  text-transform: uppercase;
+.pera {
+  margin-top: 69px;
+}
+.nav-active {
+  background-color: red !important;
+  box-shadow: 5px -1px 12px -5px grey;
 }
